# DarkSectorBeamDumpSim

./: .gitignore  90cmRSTrackLength.C  AttenuationvsPEperkeV.C  BeamProtonGenPositions.C  CMakeLists.txt  DSout.root  DarkSectorSim.cc  DefaultRSTrackLength.C  ER_events.sh  G4Data0.heprep  LinkDef.h  NeutrinoGenPositions.C  PlotAttenLengths.C  ProcessAr39.py  ProcessBeamSim.py  ProcessDM.py  ProcessElectrons.py  ProcessOpticalSim.py  ProcessPPFX.py  README.md  ar39.sh  beamsim_job.sh  beamsimshield_W_job.sh  beamsimshield_job.sh  boostedDM.sh  combpionfiles.sh  electrons.sh  example_run.mac  opticalsim_job.sh  parseDMOutput.py  ppfx_job.sh  run.mac  run_phot.mac  run_voxel.mac  setup_for_grid.sh  user.properties  vis.mac
additional/: BeamEvent.cc  BeamEvent.hh  DetectorChannel.cc  DetectorChannel.hh  DetectorEvent.cc  DetectorEvent.hh  OpPhoton.cc  OpPhoton.hh  ScintillationStore.cc  ScintillationStore.hh
macro/: vis.mac~
src/: DarkSectorSimActionInitialization.cc  DarkSectorSimActionInitialization.hh  DarkSectorSimAnalysis.cc  DarkSectorSimAnalysis.cc~  DarkSectorSimAnalysis.hh  DarkSectorSimAnalysis.hh~  DarkSectorSimDetectorConstruction.cc  DarkSectorSimDetectorConstruction.cc~  DarkSectorSimDetectorConstruction.hh  DarkSectorSimDetectorConstruction.hh~  DarkSectorSimDetectorMessenger.cc  DarkSectorSimDetectorMessenger.hh  DarkSectorSimEventAction.cc  DarkSectorSimEventAction.hh  DarkSectorSimFastScintillation.cc  DarkSectorSimFastScintillation.hh  DarkSectorSimPhysicsList.cc  DarkSectorSimPhysicsList.hh  DarkSectorSimPrimaryGeneratorAction.cc  (+17 more)
(+14 files in other folders)
